# SeAlM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  batch_buckets.cpp  batch_buckets.hpp  batch_manager.cpp  batch_manager.hpp  in_mem_cache.cpp  in_mem_cache.hpp  main.cpp  types.hpp  utils.hpp  wrapped_mapper.cpp  wrapped_mapper.hpp
analysis_utils/: plot_log.py
etc/: baseline.ini  decay_full.ini  lru_full.ini  lru_only.ini  mru_full.ini
lib/: batch_buckets.cpp  batch_buckets.hpp  cache.hpp  config.hpp  in_mem_cache.hpp  io.hpp  logging.hpp  pipeline.hpp  process.h  signaling.hpp  storage.hpp  string.h  types.hpp
scripts/: compare_embeddings.py  order_samples.py  plot_log.py  test_all.sh
src/: batch_manager.cpp  batch_manager.hpp  in_mem_cache.hpp  main.cpp  mapping_utils.hpp  prep_experiment.hpp  types.hpp  utils.hpp  wrapped_mapper.cpp  wrapped_mapper.hpp
test/: test_batch_buckets.cpp  test_cache.cpp  test_config.cpp  test_in_mem_cache.cpp  test_io.cpp  test_main.cpp  test_pipeline.cpp  test_storage.cpp
